--- a/Photorama/Controllers/Base.lproj/Main.storyboard
+++ b/Photorama/Controllers/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7ao-Hu-ksm">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,30 +15,65 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="PhotosViewController" customModule="Photorama" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QtT-ph-bpz">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vYL-t7-gJT">
+                                <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="cAU-tT-rLg">
+                                    <size key="itemSize" width="90" height="90"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="2"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCollectionViewCell" id="9vA-wM-4SV" customClass="PhotoCollectionViewCell" customModule="Photorama" customModuleProvider="target">
+                                        <rect key="frame" x="2" y="2" width="90" height="90"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="X9l-fN-vfc">
+                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="r5q-KG-23N">
+                                                    <rect key="frame" x="35" y="35" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.16097471117973328" green="0.16959187388420105" blue="0.21370577812194824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="r5q-KG-23N" firstAttribute="centerX" secondItem="9vA-wM-4SV" secondAttribute="centerX" id="3rD-Zx-RGp"/>
+                                            <constraint firstItem="r5q-KG-23N" firstAttribute="centerY" secondItem="9vA-wM-4SV" secondAttribute="centerY" id="7Sl-l3-B1B"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="X9l-fN-vfc" id="9j8-OA-gE9"/>
+                                            <outlet property="spinner" destination="r5q-KG-23N" id="j7e-r7-fiF"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="QtT-ph-bpz" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="0ai-Mu-aTE"/>
-                            <constraint firstItem="QtT-ph-bpz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QwZ-Le-Sfh"/>
-                            <constraint firstItem="QtT-ph-bpz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="l4E-Xe-MbE"/>
-                            <constraint firstItem="QtT-ph-bpz" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="pAU-By-Cds"/>
+                            <constraint firstItem="vYL-t7-gJT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="CwB-Pe-SA0"/>
+                            <constraint firstItem="vYL-t7-gJT" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="aWd-B1-atJ"/>
+                            <constraint firstItem="vYL-t7-gJT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ndd-q2-HT5"/>
+                            <constraint firstItem="vYL-t7-gJT" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="sN4-7e-teN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Photorama" id="BoP-9Q-HZB"/>
                     <connections>
-                        <outlet property="imageView" destination="QtT-ph-bpz" id="I3g-RP-dBR"/>
+                        <outlet property="collectionView" destination="vYL-t7-gJT" id="hnJ-75-6Sh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="456.80000000000001" y="118.29085457271366"/>
+            <point key="canvasLocation" x="456.52173913043481" y="118.20652173913044"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="OQk-8E-bzG">
@@ -46,7 +81,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7ao-Hu-ksm" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2eR-DJ-EnB">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
